[package]
name = "biscotti"
version = "0.3.4"
edition = "2021"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LukeMathWalker/biscotti"
readme = "README.md"
description = """
HTTP cookie management for Rust servers.
"""
categories = ["web-programming::http-server"]
keywords = ["cookies", "http", "web", "cookie"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]

[dev-dependencies]
googletest = "0.11.0"
